<resources>
    <string name="app_name">Diabetes</string>

    <string name="title_diabets">Diabetes</string>
    <string name="title_product_details">Информация о продукте</string>
    <string name="title_products">Список продуктов</string>
    <string name="title_product_table">Стол продуктов</string>
    <string name="title_profile">Профиль</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="app_product">Добавить новый продукт</string>
    <string name="product_name">Название продукта</string>
    <string name="product_carbohydrates">Количество углеводов</string>
    <string name="add_button">Добавить</string>
    <string name="product_glycemic_index">Гликемический индекс</string>
    <string name="product_group">Группа продукта</string>
    <string name="favorite_product">Любимый продукт</string>
    <string name="will_eat">Я съем это!</string>

    <string name="value_gram">%.2f грамм</string>
    <string name="value_bread_unit">%.2f ХЕ</string>

    <string name="gram">грамм</string>
    <string name="bread_unit">ХЕ</string>

    <string name="bread_unit_to_gram">%1$s ХЕ это %2$s грам</string>
    <string name="gram_to_bread_unit">%1$s грам это %2$s ХЕ</string>

    <string name="gram_product_table">%1$d грамм</string>
    <string name="bread_unit_product_table">%.2f ХЕ</string>

    <string name="hint_edt_product_value_for_calculation">Введите значение</string>
    <string name="hint_edt_glycemical_index">Гликемический индекс</string>

    <string name="hint_product_gram">Количество продукта в граммах</string>
    <string name="hint_product_GL">Количество ХЕ в продукте</string>
    <string name="settings">Настройки</string>
    <string name="products">Продукты</string>
    <string name="table">Стол</string>
    <string name="input_value">Введите значение</string>

    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="search">Поиск</string>
    <string name="update_glycemic_index">Обновить</string>
    <string name="search_hint">Введите название продукта</string>
    <string name="app_label">Product name</string>
    <string name="edit_correct_value">Введите значение</string>
    <string name="added_to_favorite">Продукт был добавлен в список</string>
    <string name="deleted_from_favorite">Продукт был удален из списка</string>
    <string name="added_to_list"> был добавлен в ваш список</string>
    <string name="ok">OK</string>
    <string name="product_exists">This product is already in your list</string>
    <string name="fill_all_fields">Please fill in all of the fields</string>
    <string name="index_was_updated">Индекс был успешно обновлен</string>
    <string name="edit_positive_value">Введите положительное число</string>
    <string name="table_text_view">Стол продуктов</string>
    <string name="toolbar_title_settings">Настройки</string>

    <string name="preference_bread_unit_key">bread_unit_key</string>
    <string name="preference_bread_unit_default_value">4</string>
    <string name="preference_bread_unit_title">Норма ХЕ</string>

    <string name="preference_carbohydrates_default_value">12</string>
    <string name="preference_carbohydrates_key">carbohydrates_key</string>

    <string name="preference_carbohydrates_title">Углеводов в ХЕ, гр</string>
    <string name="preference_insulin_factor_default_value">2</string>
    <string name="preference_insulin_factor_key">insulin_factor_key</string>
    <string name="preference_insulin_factor_title">Коэффициент инсулина</string>
    <string name="toast_for_empty_products">Вы еще не добавили продукты</string>
    <string name="product_added_on_table">Продукт был добавлен на стол</string>
    <string name="deletion_product">Продукт был удален</string>
    <string name="undo">Отменить</string>
    <string name="edit_product">Редактировать продукт</string>
    <string name="edit_button">Обновить</string>
    <string name="bread_unit_is">ХЕ это</string>
    <string name="gram_is">грамм это</string>
    <string name="value">Значение</string>
    <string name="zero_number">0</string>
    <string name="edit">Редактировать</string>
    <string name="favorite_products">Любимые продукты</string>
    <string name="title_favorite_fragment">Любимые продукты</string>

</resources>
