<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/app_product"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/product_carbohydrates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_carbohydrates"
            android:inputType="number"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/product_glycemic_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_glycemic_index"
            android:inputType="number"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/product_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_group"
            android:textSize="20sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button" />

</LinearLayout>