<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="120dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <TextView
        android:id="@+id/tv_result_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculation_layout"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        tools:text="12 грамм это 1 ХЕ"/>

    <RelativeLayout
        android:id="@+id/calculation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_product_result_value">

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="@dimen/btn_minus_plus_size"
            android:layout_height="@dimen/btn_minus_plus_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/minus_symbol"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/btn_minus"
            android:layout_toStartOf="@+id/btn_plus">

            <EditText
                android:id="@+id/edt_product_value_for_calculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:text="@string/zero_number"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="@dimen/btn_minus_plus_size"
            android:layout_height="@dimen/btn_minus_plus_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:text="@string/plus_symbol"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_product_result_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:layout_toStartOf="@+id/segmented_gram_xe"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:text="34465467535465462462462,3 XE"/>

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segmented_gram_xe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="12dp"
        android:checkedButton="@+id/btn_gram"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp">

        <RadioButton
            android:id="@+id/btn_gram"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/gram"/>

        <RadioButton
            android:id="@+id/btn_bread_unit"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bread_unit"/>

    </info.hoang8f.android.segmented.SegmentedGroup>

    <Button
        android:id="@+id/btn_eatNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_product_result_value"
        android:layout_marginTop="32dp"
        android:text="@string/will_eat"/>

    <Button
        android:id="@+id/btn_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_eatNow"
        android:layout_marginTop="8dp"
        android:text="@string/favorite_product"/>

</RelativeLayout>