<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/app_product"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/product_carbohydrates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_carbohydrates"
            android:inputType="number"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/colorPrimaryDark">

            <com.todor.diabetes.ui.product_add.DelayAutoCompleteTextView
                android:id="@+id/tv_product_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_group"
                android:imeOptions="flagNoExtractUi|actionSearch"
                android:inputType="textCapSentences"
                android:textSize="20sp"/>

        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="16dp"
            android:visibility="gone"/>

    </FrameLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button"/>

</LinearLayout>