<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!--<NumberPicker-->
    <!--android:id="@+id/amongProduct"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginTop="64dp"-->
    <!--android:orientation="horizontal"/>-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="64dp">

        <EditText
            android:id="@+id/product_gram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/product_gram"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_bread_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="2,3XE"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/segmented"
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">

            <RadioButton
                android:id="@+id/gram_button"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gram"/>

            <RadioButton
                android:id="@+id/bread_unit_button"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread_unit"/>
        </info.hoang8f.android.segmented.SegmentedGroup>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/eatNow"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/will_eat"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/favorite"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:text="@string/favorite_product"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</LinearLayout>